--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
@@ -21,7 +21,7 @@
 </p>
 
 
-<canvas id="webGLCanvas" style="width: 70%; min-width: 400px; height: 500px; margin-top: 10pt; border: solid black 1px"></canvas>
+<canvas id="webGLCanvas" style="width: 70%; min-width: 400px; max-width: 1000px; height: 500px; margin-top: 10pt; border: solid black 1px"></canvas>
 
 @code
 {
