--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ObjFileViewer.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ObjFileViewer.razor
@@ -17,7 +17,7 @@
     But when obj files are part of the blazor project, 
     then textures can be also imported as shown by the initially loaded teapot.</p>
 
-<SharpEngineSceneView @ref="sharpEngineSceneView" style="width: 70%; min-width: 400px; height: 500px; margin-top: 10pt; border: solid black 1px"></SharpEngineSceneView>
+<SharpEngineSceneView @ref="sharpEngineSceneView" style="width: 70%; min-width: 400px; max-width: 1000px; height: 500px; margin-top: 10pt; border: solid black 1px"></SharpEngineSceneView>
 
 <br />
 <p>@_infoText</p>
