--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -40,7 +40,7 @@
 
 <br />
 
-<SharpEngineSceneView @ref="sharpEngineSceneView" style="width: 70%; min-width: 400px; height: 400px; margin-top: 10pt; border: solid black 1px"></SharpEngineSceneView>
+<SharpEngineSceneView @ref="sharpEngineSceneView" style="width: 70%; min-width: 400px; max-width: 1000px; height: 400px; margin-top: 10pt; border: solid black 1px"></SharpEngineSceneView>
 
 <br />
 <p>@_infoText</p>
