--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/SharpEngineSceneView.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/SharpEngineSceneView.razor
@@ -1,25 +1,18 @@
-﻿@using System.Numerics
-@using Ab4d.SharpEngine
-@using Ab4d.SharpEngine.Cameras
-@using Ab4d.SharpEngine.Common
-@using Ab4d.SharpEngine.Materials
-@using Ab4d.SharpEngine.SceneNodes
-@using Ab4d.SharpEngine.Utilities
+﻿@using Ab4d.SharpEngine
 @using Ab4d.SharpEngine.WebGL
-@inject IJSRuntime JS
 @implements IDisposable
 
 <!-- Define the initial width and height in style. If this is not done, then under some cases, the onResize in sharp-engine.js can start increasing the size in an infinite loop -->
-<canvas id="sharpEngineCanvas" style="width: 300px; height: 150px" @attributes="AdditionalAttributes"></canvas>
+<canvas id="@_canvasId" style="width: 300px; height: 150px" @attributes="AdditionalAttributes"></canvas>
 
 @code {
-    // [Parameter]
-    // public string? Style { get; set; }
+    // BOUND FIELDS:
+    private string _canvasId = "sharpEngineCanvas"; // Just start with some value. This will be overwritten in OnInitializedAsync
 
     [Parameter(CaptureUnmatchedValues = true)]
     public Dictionary<string, object>? AdditionalAttributes { get; set; }
 
-    public CanvasInterop CanvasInterop { get; } = new CanvasInterop(canvasId: "sharpEngineCanvas");
+    public CanvasInterop CanvasInterop { get; } = new CanvasInterop(); // Automatically define the CanvasId
 
     public Scene Scene { get; } = new Scene();
 
@@ -45,6 +38,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _canvasId = CanvasInterop.CanvasId;
+
         // Initialize the browser interop (load sharp-engine.js file and from javascript get access to exported methods in the CanvasInterop class)
         // Because Blazor uses Single Page Applications style, this needs to be executed only once
         await CanvasInterop.InitializeInterop();
