Prevent initializing CanvasInterop multiple times

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
@@ -37,7 +37,7 @@
     /// <inheritdoc />
     protected override void OnAfterRender(bool firstRender)
     {
-        if (!CanvasInterop.IsInteropInitialized)
+        if (!CanvasInterop.IsInteropInitialized || _canvasInterop != null)
             return;
 
 
