--- a/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/App.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp/App.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using Ab4d.SharpEngine.Samples.BlazorWebAssemblyTesterApp.Layout
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
