Changed _bitmapTextCreator to be nullable

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -65,7 +65,7 @@
     private List<GroupNode> _addedObjects = new List<GroupNode>();
     private int _addedObjectsCount;
 
-    private BitmapTextCreator _bitmapTextCreator;
+    private BitmapTextCreator? _bitmapTextCreator;
 
     /// <inheritdoc />
     protected override void OnAfterRender(bool firstRender)
