--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
@@ -20,8 +20,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="objFileViewer">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> OBJ file viewer
+            <NavLink class="nav-link" href="objStlFileViewer">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> OBJ & STL file viewer
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="commonSamples">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Common samples
             </NavLink>
         </div>
     </nav>
