--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ObjStlFileViewer.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ObjStlFileViewer.razor
@@ -1,19 +1,22 @@
-﻿@page "/objFileViewer"
+@page "/objStlFileViewer"
 @using System.Numerics
+@using System.Text
 @using Ab4d.SharpEngine.Cameras
 @using Ab4d.SharpEngine.Common
 @using Ab4d.SharpEngine.SceneNodes
 @using Ab4d.SharpEngine.Browser
+@using Ab4d.SharpEngine.Materials
 @using Ab4d.SharpEngine.Utilities
 @implements IDisposable
 @inject IJSRuntime JS
 
-<PageTitle>Ab4d.SharpEngine.Web - OBJ file viewer</PageTitle>
+<PageTitle>Ab4d.SharpEngine.Web - OBJ and STL file viewer</PageTitle>
 
-<h1>Ab4d.SharpEngine.Web - OBJ file viewer</h1>
+<h1>Ab4d.SharpEngine.Web - OBJ and STL file viewer</h1>
 
-<p>This example shows how to load user obj and mtl files with Ab4d.SharpEngine.</p>
-<p>Note that loading texture from user selected files is not supported. 
+<p>This example shows how to load user obj, mtl and stl (text and binary) files with Ab4d.SharpEngine.</p>
+<p><strong>To load a custom file, drag and drop it to the area under the 3D scene.</strong></p>
+<p>Note that loading texture from user selected files is not supported in this sample. 
     But when obj files are part of the blazor project, 
     then textures can be also imported as shown by the initially loaded teapot.</p>
 
@@ -23,8 +26,8 @@
 <p>@_infoText</p>
 
 <div id="dropZone" style="width: 70%; min-width: 400px; height: 150px; border: 2px dashed #0078d4; border-radius: 10px; text-align: center; line-height: 150px; color: #555; font-family: sans-serif; cursor: pointer;">
-Drop obj or mtl file here or click to open file picker</div>
-<input type="file" id="fileInput" accept=".obj,.mtl" style="display: none;" />
+Drop obj, mtl or stl file here or click to open file picker</div>
+<input type="file" id="fileInput" accept=".obj,.mtl,.stl" style="display: none;" />
 
 <script>
 
@@ -67,16 +70,25 @@ Drop obj or mtl file here or click to open file picker</div>
 
     function handleFiles(files) {
         for (const file of files) {
-            console.log('File dropped:', file.name);
+            console.log('js: File dropped:', file.name);
 
             const reader = new FileReader();
 
             reader.onload = function(e) {
-                const text = e.target.result;
-                dotNetInterop.invokeMethodAsync('FileImportedJS', file.name, text);
+                var arrayBuffer = e.target.result
+                var bytes = new Uint8Array(arrayBuffer);
+                
+                // Call .Net method FileImportedJS (see below)
+                dotNetInterop.invokeMethodAsync('FileImportedJS', file.name, bytes);
+                
+                // When reading as text:
+                // const text = e.target.result;
+                // dotNetInterop.invokeMethodAsync('FileImportedJS', file.name, text);
             };
 
-            reader.readAsText(file);
+            reader.readAsArrayBuffer(file);
+            
+            // reader.readAsText(file); // Read as text; 
         }
     }
 
@@ -102,7 +114,8 @@ Drop obj or mtl file here or click to open file picker</div>
     private string? _lastMtlFileName;
     private string? _lastMtlFileContent;
 
-    private DotNetObjectReference<ObjFileViewer>? _thisJSReference;
+    private DotNetObjectReference<ObjStlFileViewer>? _thisJSReference;
+    private WireGridNode _wireGridNode;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -121,7 +134,7 @@ Drop obj or mtl file here or click to open file picker</div>
             Attitude = -25,
             Distance = 400,
             TargetPosition = new Vector3(0, 0, 0),
-            ShowCameraLight = ShowCameraLightType.Auto,
+            ShowCameraLight = ShowCameraLightType.Always,
         };
 
         sceneView.Camera = _targetPositionCamera;
@@ -139,7 +152,7 @@ Drop obj or mtl file here or click to open file picker</div>
         scene.SetAmbientLight(0.2f);
 
 
-        var wireGridNode = new WireGridNode("Wire grid")
+        _wireGridNode = new WireGridNode("Wire grid")
         {
             CenterPosition = new Vector3(0, -0.5f, 0),
             Size = new Vector2(160, 160),
@@ -160,7 +173,11 @@ Drop obj or mtl file here or click to open file picker</div>
 
             IsClosed = true,
         };
-        scene.RootNode.Add(wireGridNode);
+        
+        scene.RootNode.Add(_wireGridNode);
+        
+        
+        scene.RootNode.Add(new AxisLineNode(length: 100));
 
 
         string objUrl = "models/Teapot-with-material.obj";
@@ -189,12 +206,13 @@ Drop obj or mtl file here or click to open file picker</div>
     }
 
     [JSInvokable]
-    public void FileImportedJS(string fileName, string fileContent)
+    //public void FileImportedJS(string fileName, string fileContent) // When reading text files
+    public void FileImportedJS(string fileName, byte[] fileContent)
     {
         if (fileName.EndsWith(".obj", StringComparison.OrdinalIgnoreCase))
         {
             _lastObjFileName = fileName;
-            _lastObjFileContent = fileContent;
+            _lastObjFileContent = Encoding.ASCII.GetString(fileContent); // Convert byte array to string
 
             _lastMtlFileName = null;
             _lastMtlFileContent = null;
@@ -208,7 +226,7 @@ Drop obj or mtl file here or click to open file picker</div>
             if (_lastObjFileContent != null)
             {
                 _lastMtlFileName = fileName;
-                _lastMtlFileContent = fileContent;
+                _lastMtlFileContent = Encoding.ASCII.GetString(fileContent); // Convert byte array to string
 
                 ImportDroppedObjFile();
 
@@ -219,13 +237,54 @@ Drop obj or mtl file here or click to open file picker</div>
                 ShowInfoMessage("Cannot import mtl file because obj file was not imported. Select obj file first.");
             }
         }
+        else if (fileName.EndsWith(".stl", StringComparison.OrdinalIgnoreCase))
+        {
+            ImportDroppedStlFile(fileName, fileContent);
+
+            ShowInfoMessage($"3D model from {fileName} file imported.");
+        }
         else
         {
-            ShowInfoMessage($"File '{fileName}' not supported. Only obj and mtl files can be dropped here.");
+            ShowInfoMessage($"File '{fileName}' not supported. Only obj, mtl and stl files can be dropped here.");
         }
     }
 
     private void ImportDroppedObjFile()
+    {
+        if (string.IsNullOrEmpty(_lastObjFileContent))
+            return;
+
+        var objImporter = new ObjImporter(sharpEngineSceneView.Scene);
+
+        var importedNode = objImporter.Import(_lastObjFileContent, _lastMtlFileContent);
+
+        ShowImportedModel(importedNode);
+    }
+
+    private void ImportDroppedStlFile(string fileName, byte[] fileContent)
+    {
+        var stlImporter = new StlImporter(sharpEngineSceneView.Scene)
+        {
+            // Usually the stl files are defined by using Z-up coordinate system. This property converts the mesh to Y-up coordinates.
+            // Note that it would be also possible to change the scene's coordinate system by calling:
+            // sharpEngineSceneView.Scene.SetCoordinateSystem(CoordinateSystems.ZUpRightHanded);
+            ConvertToYUp = true, 
+            
+            // Setting CalculateNormals to true, can fix the invalid normals direction in many stl files that lead to invalid shading of the model.
+            CalculateNormals = true,  
+        };
+
+        // Create a memory stream from the byte array
+        using MemoryStream stlStream = new MemoryStream(fileContent);
+        
+        // STL always defines only one mesh.
+        // The Import method returns a single MeshModelNode
+        var importedMeshModelNode = stlImporter.Import(stlStream);
+
+        ShowImportedModel(importedMeshModelNode);
+    }
+
+    private void ShowImportedModel(SceneNode? importedSceneNode)
     {
         var scene = sharpEngineSceneView.Scene;
 
@@ -236,17 +295,23 @@ Drop obj or mtl file here or click to open file picker</div>
             _importedSceneNode = null;
         }
 
-        if (string.IsNullOrEmpty(_lastObjFileContent))
+        if (importedSceneNode == null)
             return;
+        
+        Utilities.ModelUtils.PositionAndScaleSceneNode(importedSceneNode, new Vector3(0, 0, 0), PositionTypes.Bottom, new Vector3(100, 100, 100));
 
-        var objImporter = new ObjImporter(sharpEngineSceneView.Scene);
-
-        var importedNode = objImporter.Import(_lastObjFileContent, _lastMtlFileContent);
-
-        Utilities.ModelUtils.PositionAndScaleSceneNode(importedNode, new Vector3(0, 0, 0), PositionTypes.Bottom, new Vector3(100, 100, 100));
-
-        sharpEngineSceneView.Scene.RootNode.Add(importedNode);
-        _importedSceneNode = importedNode;
+        if (importedSceneNode is GroupNode importedGroupNode)
+        {
+            _importedSceneNode = importedGroupNode;
+        }
+        else
+        {
+            // _importedSceneNode is GroupNode, so create one and added imported ModelMeshNode to it
+            _importedSceneNode = new GroupNode("ImportedStlModel"); 
+            _importedSceneNode.Add(importedSceneNode);
+        }
+            
+        scene.RootNode.Add(_importedSceneNode);
     }
 
     private void ShowInfoMessage(string message)
@@ -261,3 +326,4 @@ Drop obj or mtl file here or click to open file picker</div>
         sharpEngineSceneView.Dispose();
     }
 }
+
