Updated layout (removed padding from MainLayout)

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
@@ -13,15 +13,17 @@
 
 <PageTitle>Ab4d.SharpEngine.Web - Manual Initialization</PageTitle>
 
-<h1>Ab4d.SharpEngine.Web</h1>
+<div style="padding: 1.5rem">
+    <h1>Ab4d.SharpEngine.Web</h1>
 
-<p>This sample shows how to manually initialize the Ab4d.SharpEngine.Web.</p>
-<p>Instead of using the SharpEngineSceneView component, here we create a canvas DOM element and then connect to it
-    by using CanvasInterop. After that we can create the WebGLDevice, Scene and SceneView objects.
-</p>
+    <p>This sample shows how to manually initialize the Ab4d.SharpEngine.Web.</p>
+    <p>Instead of using the SharpEngineSceneView component, here we create a canvas DOM element and then connect to it
+        by using CanvasInterop. After that we can create the WebGLDevice, Scene and SceneView objects.
+    </p>
 
 
-<canvas id="webGLCanvas" style="width: 70%; min-width: 400px; max-width: 1000px; height: 500px; margin-top: 10pt; border: solid black 1px"></canvas>
+    <canvas id="webGLCanvas" style="width: 70%; min-width: 400px; max-width: 1000px; height: 500px; margin-top: 10pt; border: solid black 1px"></canvas>
+</div>
 
 @code
 {
