--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/MainLayout.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
     </div>
 
     <main>
-        <article class="content px-4">
+        <article style="padding-left: 0 !important; padding-right: 0 !important; ">
             @Body
         </article>
     </main>
