--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="uiProviderDemo">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> UIProviderDemo
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="commonSamples">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Common samples
             </NavLink>
