--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
@@ -29,10 +29,37 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> UIProviderDemo
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+@*         <div class="nav-item px-3">
             <NavLink class="nav-link" href="commonSamples">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Common samples
             </NavLink>
+        </div> *@
+        
+        <!-- Collapsible parent item -->
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="commonSamples" @onclick="ToggleManualInit">
+            @* <button class="nav-link btn btn-toggle w-100 text-start" @onclick="ToggleManualInit"> *@
+                @* <span class="bi bi-plus-square-fill-nav-menu"></span> *@
+
+                <span class="bi @(isManualInitOpen ? "bi-minus-square-fill-nav-menu" : "bi-plus-square-fill-nav-menu")"></span>
+                Common samples
+            @* </button> *@
+            </NavLink>
+
+            @if (isManualInitOpen)
+            {
+                <div class="submenu ms-2">
+                    <button class="nav-link nav-submenu-link" href="commonSamples/step1">
+                        Step 1
+                    </button>
+                    <NavLink class="nav-link nav-submenu-link" href="commonSamples/step2">
+                        Step 2
+                    </NavLink>
+                    <NavLink class="nav-link nav-submenu-link" href="commonSamples/advanced">
+                        Advanced Options
+                    </NavLink>
+                </div>
+            }
         </div>
     </nav>
 </div>
@@ -41,6 +68,13 @@
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+    private bool isManualInitOpen = false;
+
+    private void ToggleManualInit()
+    {
+        isManualInitOpen = !isManualInitOpen;
+    }
 
     private void ToggleNavMenu()
     {
