--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/css/app.css
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/css/app.css
@@ -113,3 +113,9 @@ code {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+
+.nav-submenu-link {
+    height: 1.7rem !important;
+    line-height: 1.7rem !important;
+}
